# A.M.Y

./: .env.example  .gitignore  ATLAS_TOOL_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT.md  README.md  README_PUBLIC.md  RELEASE_CHECKLIST.md  RESEARCH.md  SCIENCE_MANIFESTO.md  SECURITY.md  USE_POLICY.md  amy.py  audit_papers.py  config.yaml  config_gptoss.yaml  config_minimax.yaml  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_amy_novelty.py  security_best_practices_report.md  test_atlas_by_branch.py
atlas/: .api_keys.enc  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALISIS_PROYECTO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY_AUDIT_CHANGELOG.md  advanced_validation_results_20251227_012934.json  alembic.ini  brian2.py  lab_experiment_result.json  libsbml.py  main.py  main_refactored.py  matplotlib_shadow_bak.py  meta4_validation_results.json  multi_domain_research_20251226_230152.json  multi_domain_research_20251226_230316.json  pyproject.toml  pytest.ini  rdkit_shadow_bak.py  real_science_investigation_20251226_235335.json  requirements-bio.txt  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements-quantum.txt  requirements-scientific.txt  requirements.txt  run_agent_with_tools.py  run_benchmark.py  run_full_research_cycle.py  (+12 more)
atlas/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
atlas/alembic/: env.py
atlas/app/: __init__.py  additive_manufacturing_service.py  async_processor.py  blockchain_validation.py  cache.py  cache_unified.py  database.py  distributed_manager.py  ethics_gate.py  extended_science_tools.py  gpu_accelerator.py  hmac_integrity.py  integrity_core.py  logging_config.py  main.py  multiscale_models.py  operational_cross_validation_matrix.py  performance_profiler.py  risk_policy.py  run_agent_with_tools_legacy.py  scalability.py  service_registry_discovery.py  tool_adapter.py  unified_tool_adapter.py  validation_matrix_persistence.py
atlas/benchmarks/: benchmark_async_migration.py  simple_benchmark.py
atlas/cobra/: __init__.py
atlas/config/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  agents.yaml  agents_enhanced.yaml  alembic.ini  docker-compose-improvements.yml  docker-compose.yml  ethics_policy.yaml  external_science.yaml  huggingface_multiagent.yaml  improvements_config.yaml  models.yaml  plausibility.yaml  policy_engine_config.yaml  pytest.ini  requirements.audit.txt
atlas/data/: band_structure.txt  classification_log.txt  data_quality_report.json  faiss_index_v4_meta.json  final_llm_classifications.summary.json  gpaw_output.txt  ingestion_state.json  kmeans_v4.pkl  manual_labels_v4_test.json  massive_llm_classifications_complete.summary.json  massive_llm_classifications_full.summary.json  massive_llm_classifications_test.summary.json  mistral_diversity_test.json  model_benchmark_results.json  models_registry.json  parallel_experiments_results_20250922_000452_biology_data.csv  parallel_experiments_results_20250922_000452_chemistry_data.csv  parallel_experiments_results_20250922_000452_materials_science_data.csv  pipeline_dag_v4.json  plausibility_training_v4_centroids.npy  plausibility_training_v4_clusters.parquet  plausibility_training_v4_embeddings.parquet  plausibility_training_v4_enriched.parquet  plausibility_training_v4_weak_labels.parquet  plausibility_training_v4_weak_labels_alt.parquet  plausibility_training_v4_weak_labels_ensemble.parquet  prompt_registry.json  provenance_report.json  publication_years_cache_v1.json  scientific_experiment_data_20250921_235909.csv  service_registry.json  submission_analysis.csv  test_classification.summary.json  tfidf_v4.pkl  toy_dataset_20250904_204304.csv  versions.json
atlas/data_quality/: data_validation_report.json
atlas/demos/: mathematics_demo_advanced.py  mathematics_demo_basic.py
atlas/docs/: AUTONOMOUS_RESEARCH_AGENT.md  ENV_SETUP_GUIDE.md  HUGGINGFACE_MULTIAGENT_GUIDE.md  INDEX.md  MODELS_SELECTION_GUIDE.md  QUICKSTART_HUGGINGFACE.md  QUICK_START.md  QUICK_START_ENHANCED_LLM.md  README.md  SCIENTIFIC_SETUP.md  SPECIALIZED_MODELS_GUIDE.md  app_entrypoints.md  architecture.md  autonomous_science_roadmap_2026.md  conf.py  configuration.md  external_science_adapters.md  generate_docs.py  index.rst  mkdocs.yml  requirements.txt  router_registry.md  tool_realism_audit.md
atlas/examples/: advanced_gpu_scaling_demo.py  advanced_medical_imaging_example.py  advanced_reproducibility_example.py  async_demo.py  autonomous_peer_review_demo.py  axiom_complete_real_data_demo.py  axiom_final_pipeline.py  axiom_real_data_comprehensive_demo.py  axiom_scientific_workflow_example.py  biomechanics_practical_example.py  biomechanics_service_demo.py  cloud_integration_demo.py  complete_research_cycle.py  comprehensive_peer_review_tests.py  definitive_autonomous_cycle.py  demo_axiom_mathematics.py  demonstrate_advanced_features.sh  demonstrate_optimizations.sh  demonstrate_phase3.py  dvc_versioning_e2e.py  final_autonomous_cycle.py  full_research_workflow_example.py  ge_validate_toy_dataset.py  genomics_practical_example.py  gpu_acceleration_demo.py  huggingface_multiagent_demo.py  hypothesis_prompt_ab_test.py  journal_formatting_example.py  knowledge_graph_demo.py  main_simple.py  medical_imaging_example.py  medical_imaging_practical_example.py  medical_imaging_quick_test.py  (+36 more)
(+2801 files in other folders)
