[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amy"
version = "1.0.0"
description = "A.M.Y (Autonomous Mind Yield) — autonomous scientific discovery agent built on the AXIOM Atlas tool platform"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Giovanni Arangio" },
]
keywords = [
    "autonomous-agent",
    "scientific-discovery",
    "active-inference",
    "cognitive-architecture",
    "global-workspace",
    "soar",
    "voyager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "networkx>=3.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "beautifulsoup4>=4.12.0",
    "arxiv>=2.1.0",
    "feedparser>=6.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
]

[project.scripts]
amy = "amy:_cli"

[project.urls]
Homepage = "https://github.com/Ganador1/amy"
Documentation = "https://github.com/Ganador1/amy/blob/main/README.md"
Repository = "https://github.com/Ganador1/amy"

[tool.setuptools]
packages = [
    "core",
    "cognition",
    "memory",
    "senses",
    "skills",
    "communication",
    "sandbox",
    "evolution",
]
py-modules = ["amy"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
